data_model/derive/tests/ui_fail/transparent_api_private_item.stderr
error[E0603]: struct `QueryPayload` is private
 --> tests/ui_fail/transparent_api_private_item.rs:1:36
  |
1 | use iroha_data_model::query::http::QueryPayload;
  |                                    ^^^^^^^^^^^^ private struct
  |
note: the struct `QueryPayload` is defined here
 --> $WORKSPACE/data_model/src/query.rs
  |
  |     pub use self::model::*;
  |             ^^^^^^^^^^^
