data_model/derive/tests/ui_fail/transparent_api_private_item.rs
use iroha_data_model::query::http::QueryPayload;

fn main() {}
